v1.7 Optimizaciones generales